--- a/templates/home.html
+++ b/templates/home.html
@@ -1,33 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <!-- links to the pages -->
-    <a href="/admin">View all Admins</a> (Access: Admin)<br><br>
-    <a href="/residents">View all Students</a> (Access: Admin, Residents)<br><br>
-    
-    <br><br>
-    <!-- Show only if user is logged in -->
-    {% if current_user.is_authenticated %}
-        <!-- Show current users email -->
-        <b>Current user</b>: {{current_user.email}}
-        <!-- Current users roles -->
-        {% if current_user.roles %}
-            User has Roles
-        {% endif %}
-        <br><br>
-        <!-- link for logging out -->
-        <a href="/logout">Logout</a>
-        <!-- Show if user is not logged in -->
-    {% else %}
-        <a href="/signup">Sign up</a> | <a href="/signin">Sign in</a>
-    {% endif %}
+{% extends 'base.html' %}
+{% block body %}
+  <style>
+    .shadow1 {
+      box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    }
+  </style>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-2 g-0" style="background-color: #33444C;">
+        <div class="nav mt-2 flex-column nav-pills" id="nav-tab" role="tablist" aria-orientation="vertical">
+          {% if role_check('Resident') %}
+            <div style="{% if request.endpoint == 'user_home' %}
+                background-color:#2B3540;
+              {% endif %}">
+              <a class="nav-link text-white" id="nav-login-tab" type="button" role="tab" aria-controls="nav-login" aria-selected="true" href="{{ url_for('user_home') }}">
+                <i class="fa-solid fa-gauge"></i>
+                <span class="ms-2">Dashboard-User</span>
+              </a>
+            </div>
+          {% else %}
+            <div style="{% if request.endpoint == 'admin_home' %}background-color:#2B3540;{% endif %}">
+              <a class="nav-link text-white" id="nav-register-tab" type="button" role="tab" aria-controls="nav-register" aria-selected="false" href="{{ url_for('admin_home') }}">
+                <i class="fa-solid fa-gauge"></i>
+                <span class="ms-2">Dashboard-Admin</span>
+              </a>
+            </div>
+          {% endif %}
+          <div style="{% if request.endpoint in ['maintenance','create_maintenance'] %}background-color:#2B3540;{% endif %}">
+            <a class="nav-link text-white" id="nav-maintenance-tab" type="button" role="tab" aria-controls="nav-maintenance" aria-selected="true" href="{{ url_for('maintenance') }}">
+              <i class="fa-solid fa-hammer"></i>
+              <span class="ms-2">Maintenance</span>
+            </a>
+          </div>
 
-    <br><br>
-        
-</body>
-</html>
+          {% if current_user %}
+            <div>
+              <a href="/logout" class="nav-link text-white" id="nav-login-tab" type="button" role="tab" aria-controls="nav-login" aria-selected="true"  >
+                <i class="fa-solid fa-right-from-bracket"></i>
+                <span class="ms-2">Logout</span>
+              </a>
+            </div>          
+          {% endif %}
+        </div>
+      </div>
+      <div class="col" style="background-color: #F2F9FF; height:100vh">
+        {% block content %}
+        {% endblock %}
+      </div>
+    </div>
+  </div>
+{% endblock %}
