--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,7 +1,6 @@
 <!-- signin.html -->
-
-<h2>Sign in</h2>
-
+{% extends "base.html" %}
+{% block body %}
 <!-- Show only if user is logged in -->
 {% if current_user.is_authenticated %}
     You are already logged in.
@@ -10,17 +9,51 @@
 {% else %}
 <!-- msg that was passed while rendering template -->
 {{ msg }}<br>
+<style>
+    .gradient-button {
+        background: linear-gradient(to right, #ff9999, #ff7866);
+        border: none;
+        color: #fff;
+        padding: 10px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 5px;
+      }
+</style>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-5">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <h3 class="card-title text-center">Login</h3>
+                    <p class="card-text text-center">Access our Application</p>
 
-<form action="#" method="POST" id="signin-form">
-            <label>Email Address </label>
-            <input type="text" name="email" required /><br><br>
-            
-            <label>Password </label>
-            <input type="password" name="password" required/><br><br>
-            
-            <input class="btn btn-primary" type="submit" value="Submit"><br><br>
-    
-            <span>Don't have an account?</span>
-            <a href="/signup">Sign up</a>
-</form>
+                    <form action="/signin" method="POST" id="signin-form" >
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email Address</label>
+                            <input type="email" name = "email" class="form-control" id="email" placeholder="Enter your email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Password</label>
+                            <input type="password" name = "password" class="form-control" id="password"
+                                placeholder="Enter your password">
+                        </div>
+                        <div class="d-grid gap-2">
+                            <button type="submit" value="Submit" class="gradient-button ">Login</button>
+                        </div>
+                        <div class="text-center mt-2">
+                            <a href="#">Forgot password?</a>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endif %}
+{% endblock body %}
