--- a/templates/maintenance.html
+++ b/templates/maintenance.html
@@ -69,7 +69,7 @@
                             <tr class="collapse" id="collapse{{ record.id }}">
                                 <td colspan="7">
                                     <div class="card card-body">
-                                        <form action="{{ url_for('update_status', id= record.id)}}" method="POST">
+                                        <form action="{{ url_for('admin_bp.update_status', id= record.id)}}" method="POST">
                                             <input name="id" type="text" hidden value="{{ record.id }}">
                                             <div class="row justify-content-center align-items-center">
                                                 <div class="col-md-3">
