--- a/app/blueprints/user/templates/user_home.html
+++ b/app/blueprints/user/templates/user_home.html
@@ -98,7 +98,7 @@
                         </td>
                         <td>
                           {% if bill.payment_status in ["Not Paid", "Partial Payment"] %}
-                            <a href="{{ url_for('payment', bill_id=bill.bill_id) }}" class="btn btn-primary py-1 px-2">
+                            <a href="{{ url_for('user_bp.payment', bill_id=bill.bill_id) }}" class="btn btn-primary py-1 px-2">
                               Pay Bill
                             </a>
                           {% endif %}
